Added css changes

--- a/frontend-app/src/static/css/common.css
+++ b/frontend-app/src/static/css/common.css
@@ -33,6 +33,10 @@ Button{
 
 }
 
+
+.performance_col{
+    padding: 5px;
+}
 .performance_row:nth-child(even) {  
     background-color:#0000000d;  }
 
